# MashupDrawingsDemo

./: CMakeLists.txt  README.md  README.txt
Core/: CMakeLists.txt
Core/Core/exceptions/: runtimeerror.cpp  runtimeerror.h
Core/Core/math/: canvasfield.h  curveutility.cpp  curveutility.h  interpcubic.cpp  interpcubic.h  segcollidergrid.h
Core/Core/model/: boundingboxback.h  boundingboxforward.h  curveback.h  curveforward.h  curvesforward.h  interval.cpp  interval.h  lineback.h  lineforward.h  polyline.h  posback.h  posforward.h  rgbback.h  rgbforward.h  stroke.cpp  stroke.h  strokesforward.h  stroketools.cpp  stroketools.h
Core/Core/utility/: beziersfromspline.cpp  beziersfromspline.h  boundingbox.cpp  boundingbox.h  bspline2.cpp  bspline2.h  bspline2utility.cpp  bspline2utility.h  buildsplineexception.h  curvecurveintersection.h  curvefitparametrizetype.h  curveinterval.cpp  curveinterval.h  curvesegment.cpp  curvesegment.h  ellipse.cpp  ellipse.h  intcoord.cpp  intcoord.h  intersectionparameters.h  linesegment.cpp  linesegment.h  mathutility.cpp  polarinterval.cpp  polarinterval.h  stopwatch.cpp  stopwatch.h  twodarray.h  vector2.cpp  vector3.cpp  wall.cpp  wall.h
Core/Core/view/: consoleprogressbar.cpp  consoleprogressbar.h  progressbar.cpp  progressbar.h
Mashup/: CMakeLists.txt
Mashup/Mashup/: abfield.h  blenddrawings.cpp  blenddrawings.h  blendoptions.h  drawing.cpp  drawing.h  drawingid.cpp  drawingid.h  drawings.cpp  drawings.h  endpoint.h  onbarrierpath.cpp  onbarrierpath.h  paircutter.h  randombinary.cpp  randombinary.h  samedrawinghits.cpp  samedrawinghits.h  scalarfield.cpp  scalarfield.h  strokeback.h  strokeforward.h  strokepoly.cpp  strokepoly.h  strokesegcollider.cpp  strokesegcollider.h  strokeside.h  substroke.cpp  substroke.h  tinterval.h  weightfunctor.cpp  weightfunctor.h
Mashup/Mashup/chains/: chain.cpp  chain.h  chainbuilder.cpp  chainbuilder.h  joiner.cpp  joiner.h  joint.h  nextstep.cpp  nextstep.h  router.cpp  router.h
Mashup/Mashup/tails/: taildata.cpp  taildata.h  tailmaker.cpp  tailmaker.h  tailtype.h
Mashup/Mashup/topology/: crossing.cpp  crossing.h  findtopology.cpp  findtopology.h  strokeintersection.h  strokeintervals.cpp  strokeintervals.h  topology.cpp  topology.h
MashupDemo/: CMakeLists.txt  main.cpp  mashupinputs.h  prepareinputs.cpp  prepareinputs.h  savetofile.cpp  savetofile.h
PrintCurves/: CMakeLists.txt
PrintCurves/PrintCurves/: cap.h  createfiles.cpp  createfiles.h  curvespostscript.cpp  curvespostscript.h  functors.h  miteredcurve.cpp  miteredcurve.h  printcurvesutility.cpp  printcurvesutility.h  strokeproperties.h
